<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.android.agingtest.AgingTestActivity" >

    <ToggleButton
        android:id="@+id/vibration_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textOn="@string/vibration_test_on"
        android:textOff="@string/vibration_test_off" />

    <ToggleButton
        android:id="@+id/speaker_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textOn="@string/speaker_test_on"
        android:textOff="@string/speaker_test_off" />

    <ToggleButton
        android:id="@+id/earpiece_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textOn="@string/earpiece_test_on"
        android:textOff="@string/earpiece_test_off" />

</LinearLayout>
